Center placement of social buttons when on mobile. Correct pointer events bug on social buttons.

--- a/_sass/partials/_body.scss
+++ b/_sass/partials/_body.scss
@@ -3,7 +3,7 @@ body {
 }
 
 .container {
-	padding-top: 40px;
+	margin-top: 40px;
 }
 
 .overlay {
